fix minor spacing issue in top nav

--- a/src/styles/antd-overrides/collapse.scss
+++ b/src/styles/antd-overrides/collapse.scss
@@ -166,6 +166,7 @@
 .resources-dropdown {
   position: absolute;
   top: 9px;
+  margin-left: -8px;
   .ant-collapse-header {
     font-weight: 600 !important;
     color: var(--text-primary) !important;
